--- a/example/src/components/common/header/Header.css
+++ b/example/src/components/common/header/Header.css
@@ -1,15 +1,18 @@
 .header {
   display: flex;
+  padding: 10px 20px;
+  margin-bottom: 20px;
 }
 
 .header .header-items {
   padding: 10px;
   border: 1px solid #e1e1e1;
-  margin: 5px 0px;
+  margin: 5px;
   cursor: pointer;
   transition: background 0.2s;
   flex: 1;
   text-align: center;
+  border-radius: 4px;
 }
 
 .header .header-items.active {
